# 3bee_code_test_solution

./: .gitignore  Makefile  README.md  pyproject.toml  solution_README.md
src/pollinator_abundance/: basic.py  constants.py  element.py  handler.py  image_processing.py  logconf.py  main.py  math_v1.py  math_v2.py  models.py  reporting.py  server.py
src/pollinator_abundance/data/: image_ca.npy  np_image_roi.npy
src/pollinator_abundance/tests/: test_end_user.py
